[gd_scene load_steps=41 format=3 uid="uid://bgjihptpibjv8"]

[ext_resource type="Script" path="res://entities/enemies/goblin.gd" id="1_87mtr"]
[ext_resource type="Texture2D" uid="uid://d2ejm5jdox7hh" path="res://images/Monsters_Creatures_Fantasy/Goblin/Attack.png" id="1_ps8wt"]
[ext_resource type="Texture2D" uid="uid://bmlik7ifv8lis" path="res://images/Monsters_Creatures_Fantasy/Goblin/Death.png" id="2_2gkcv"]
[ext_resource type="PackedScene" uid="uid://ywkdi4s2dbs8" path="res://entities/proyectiles/goblin_proyectil.tscn" id="2_75o8m"]
[ext_resource type="Texture2D" uid="uid://dgypv5w643hct" path="res://images/Monsters_Creatures_Fantasy/Goblin/Idle.png" id="3_03e6a"]
[ext_resource type="Texture2D" uid="uid://bnw5hqx8k0bbr" path="res://images/Monsters_Creatures_Fantasy/Goblin/Run.png" id="4_bkwxl"]
[ext_resource type="Texture2D" uid="uid://c48fy31ha8dyp" path="res://images/Monsters_Creatures_Fantasy/Goblin/Take Hit.png" id="5_dp312"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8617t"]
atlas = ExtResource("1_ps8wt")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6ysa"]
atlas = ExtResource("1_ps8wt")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_yve14"]
atlas = ExtResource("1_ps8wt")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2rft"]
atlas = ExtResource("1_ps8wt")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_cri4a"]
atlas = ExtResource("1_ps8wt")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_wojlg"]
atlas = ExtResource("1_ps8wt")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7km3"]
atlas = ExtResource("1_ps8wt")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_smn7w"]
atlas = ExtResource("1_ps8wt")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqdo0"]
atlas = ExtResource("2_2gkcv")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_awd17"]
atlas = ExtResource("2_2gkcv")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_uodx4"]
atlas = ExtResource("2_2gkcv")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_rimw8"]
atlas = ExtResource("2_2gkcv")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_uumm1"]
atlas = ExtResource("3_03e6a")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_aovtm"]
atlas = ExtResource("3_03e6a")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_615no"]
atlas = ExtResource("3_03e6a")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ri1fa"]
atlas = ExtResource("3_03e6a")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_0f5dr"]
atlas = ExtResource("4_bkwxl")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2vt0"]
atlas = ExtResource("4_bkwxl")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvpks"]
atlas = ExtResource("4_bkwxl")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnycu"]
atlas = ExtResource("4_bkwxl")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_kojwc"]
atlas = ExtResource("4_bkwxl")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4mnn"]
atlas = ExtResource("4_bkwxl")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5kbv"]
atlas = ExtResource("4_bkwxl")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7bq5"]
atlas = ExtResource("4_bkwxl")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvkxb"]
atlas = ExtResource("5_dp312")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_juxc6"]
atlas = ExtResource("5_dp312")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ylbl"]
atlas = ExtResource("5_dp312")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_rv266"]
atlas = ExtResource("5_dp312")
region = Rect2(450, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_o4i0n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8617t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6ysa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yve14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2rft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cri4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wojlg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7km3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smn7w")
}],
"loop": false,
"name": &"attack",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqdo0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awd17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uodx4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rimw8")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uumm1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aovtm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_615no")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ri1fa")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0f5dr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2vt0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvpks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnycu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kojwc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4mnn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5kbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7bq5")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvkxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_juxc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ylbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rv266")
}],
"loop": false,
"name": &"takeHit",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k6k11"]
height = 34.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tkti8"]
size = Vector2(487, 208.688)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hmqfo"]
size = Vector2(244.625, 92)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bmhc5"]

[node name="Goblin" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 2
platform_floor_layers = 4294967294
script = ExtResource("1_87mtr")
proyectile = ExtResource("2_75o8m")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_o4i0n")
animation = &"attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 10)
shape = SubResource("CapsuleShape2D_k6k11")

[node name="visionArea" type="Area2D" parent="."]

[node name="vision_CollisionShape" type="CollisionShape2D" parent="visionArea"]
position = Vector2(-2, -9)
shape = SubResource("RectangleShape2D_tkti8")
debug_color = Color(0, 0.6, 0.701961, 0.109804)

[node name="fleeArea" type="Area2D" parent="."]

[node name="fleeArea_CollisionShape" type="CollisionShape2D" parent="fleeArea"]
position = Vector2(-1, -15)
shape = SubResource("RectangleShape2D_hmqfo")
debug_color = Color(0.745098, 0.462745, 0, 0.2)

[node name="sensorLeft" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="sensorLeft"]
position = Vector2(-63, 29)
shape = SubResource("RectangleShape2D_bmhc5")
debug_color = Color(0, 0.639216, 0.0313726, 0.541176)

[node name="sensorRight" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="sensorRight"]
position = Vector2(63, 29)
shape = SubResource("RectangleShape2D_bmhc5")
debug_color = Color(0, 0.639216, 0.0313726, 0.541176)

[node name="Timer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="body_entered" from="visionArea" to="." method="_on_vision_area_body_entered"]
[connection signal="body_entered" from="fleeArea" to="." method="_on_flee_area_body_entered"]
[connection signal="body_exited" from="fleeArea" to="." method="_on_flee_area_body_exited"]
[connection signal="body_exited" from="sensorLeft" to="." method="_on_sensor_left_body_exited"]
[connection signal="body_exited" from="sensorRight" to="." method="_on_sensor_right_body_exited"]
